--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
         <div class="nav_container">
             <label for="menu" class="navlabel">
-                <img src="./icons8-men.svg" alt="menu-h" class="nav:img">
+                <img src="./img/icons8-men.svg" alt="menu-h" class="nav:img">
 
             </label>
             <input type="checkbox" id="menu" class="nav__input">
@@ -71,7 +71,7 @@
         <img src=".//img/github.png" class="imgh" alt="skills">
         <img src=".//img/git_original_logo_icon_146509.png" class="imgh" alt="skills">
     </section>
-    <section class="container-proyects" id="Projectos">
+    <section class="container-proyects" id="Proyectos">
         
         <div class="cards-lolita">
             <img src=".//img/laptop.jpg" class="imglaptop" alt="laptop">
